Update upgrading-metabase.md